--- a/Portfolio.html
+++ b/Portfolio.html
@@ -49,19 +49,19 @@
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="Index.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Portfolio.html#about">About Me</a>
+                            <a class="nav-link" href="portfolio.html#about">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Portfolio.html#skills">Skills</a>
+                            <a class="nav-link" href="portfolio.html#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Portfolio.html#project">Projects</a>
+                            <a class="nav-link" href="portfolio.html#project">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Contact.html">contact</a>
+                            <a class="nav-link" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
