--- a/Portfolio.html
+++ b/Portfolio.html
@@ -236,7 +236,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="client row">
                         <div class="col-lg-4 col-md-12 client-img">
-                            <img src="/PortFolio_PS/img/banner/Chelsea.jfif" alt="img1" class="img-fluid">
+                            <img src="./img/banner/Chelsea.jfif" alt="img1" class="img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Chelsea Robertson </h4>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="client row">
                         <div class="col-lg-4 col-md-12 client-img">
-                            <img src="/PortFolio_PS/img/banner/Ashi.JPG" alt="img2" class="img-fluid">
+                            <img src="./img/banner/Ashi.JPG" alt="img2" class="img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Ashish </h4>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="client row">
                         <div class="col-lg-4 col-md-12 client-img">
-                            <img src="/PortFolio_PS/img/banner/Vinay.JPG" alt="img1" class="img-fluid">
+                            <img src="./img/banner/Vinay.JPG" alt="img1" class="img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Vinay</h4>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="client row">
                         <div class="col-lg-4 col-md-12 client-img">
-                            <img src="/PortFolio_PS/img/banner/Ria.jfif" alt="img2" class="img-fluid">
+                            <img src="./img/banner/Ria.jfif" alt="img2" class="img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-12 about-client">
                             <h4 class="text-uppercase">Ritvika Malik</h4>
